[workspace]
members = ["packages/*", "contracts/*", "proto-build"]
resolver = "2"

[workspace.package]
authors = ["Augusto Elesbão <aelesbao@users.noreply.github.com>"]
license = "Apache-2.0"
repository = "https://github.com/archway-network/arch3.rs"
homepage = "https://archway.io"

[workspace.dependencies]
cosmwasm-schema = "2.1.4"
cosmwasm-std = { version = "2.1.4" }
cosmwasm-storage = "1.5.2"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.20"
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
thiserror = "1.0.61"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
